--- a/index.html
+++ b/index.html
@@ -23,144 +23,73 @@
         </style>
         <!-- User-generated js -->
         <script>
-            try {
-
-    $(function() {
-
+$(function() {
+    $("input:radio").click(function(){
+            $('.toHide').hide();
+            $("#blk-"+$(this).val()).show();
     });
-
-  } catch (error) {
-    console.error("Your javascript has an error: " + error);
-  }
+});
         </script>
     </head>
     <body>
     
 <form name="form1" action="multipageresult.php" method="POST">
         <!-- Home -->
-        <div data-role="page" data-theme="p" id="page1">
+        <div data-role="page" data-theme="p" id="step1">
             <div data-theme="p" data-role="header">
             	<div>
                 <a href="#" class="logo"></a>
                 </div>
                 <h1>
-                    Report "No Power"
+                    Outage Center
                 </h1>
-                <h2>
-                	(1 of 4)
-                </h2>
             </div>
             <div data-role="content">
             	<div id="instructions">
                 <h4>
-                    Where is the problem?
+                    Welcome to the PG&E Outage Center
                 </h4>
                 <p>
-                	Locate the problem by address or by the phone number associated with the account.
+                	Reporting the outage is fast and easy. Please choose one of the following:
                 </p>
                 </div>
-                <div data-role="fieldcontain">
-                    <fieldset data-role="controlgroup" data-type="horizontal">
-                        <input id="radio1" name="" value="radio1" type="radio" checked="checked" />
-                        <label for="radio1">
-                            Address
-                        </label>
-                        <input id="radio2" name="" value="radio2" type="radio" />
-                        <label for="radio2">
-                            Phone
-                        </label>
-                    </fieldset>
-                </div>
-                <div data-role="fieldcontain">
-                    <fieldset data-role="controlgroup">
-                        <label for="address" class="ui-hidden-accessible">Address:</label>
-                        </label>
-                        <input name="" id="address" placeholder="Enter Address" value="" type="text" />
-                    </fieldset>
-                    <fieldset data-role="controlgroup">
-                        <label for="location" class="ui-hidden-accessible">Zip or City:</label>
-                        </label>
-                        <input name="" id="location" placeholder="Enter Zip Code or City" value="" type="text" />
-                    </fieldset>
-                </div>
             </div>
-                <div data-role="footer" data-theme="f">
-                <div id="stretch">
-                <a data-role="button" data-theme="g" data-inline="true" data-transition="slide" href="#page1">
-                    Cancel
+            <div data-role="collapsible">
+                <h3>
+                Report Power Problem
+                </h3>
+                <ul data-role="listview" data-inset="true">
+                <li data-theme="c">
+                    <a href="report/" data-transition="slide">
+                        No Power
+                    </a>
+                </li>
+                <li data-theme="c">
+                    <a href="report/" data-transition="slide">
+                        Intermintent Power
+                    </a>
+                </li>
+                </ul>
+            </div>
+            <ul data-role="listview" data-inset="true">
+            <li data-theme="c">
+                <a href="#page1" data-transition="slide">
+                    View Current Outages
                 </a>
-                <a data-role="button" data-inline="true" data-transition="slide" href="#page2">
-                    Continue
+            </li>
+            <li data-theme="c">
+                <a href="#page1" data-transition="slide">
+                    Report Down Power Line
                 </a>
-                </div>
+            </li>
+            <li data-theme="c">
+                <a href="#page1" data-transition="slide">
+                    Report Gas Leak
+                </a>
+            </li>
+        </ul>
                 </div>
             </div>
         </div>
-        <div data-role="page" data-theme="p" id="page2">
-            <div data-theme="p" data-role="header">
-            	<div>
-                <a href="#" class="logo"></a>
-                </div>
-                <h1>
-                    Contact Info
-                </h1>
-                <h2>
-                	(2 of 4)
-                </h2>
-            </div>
-            <div data-role="content">
-            	<div id="instructions">
-                <h4>
-                    How can we contact you?
-                </h4>
-                <p>
-                	If we have any questions, what phone number can we reach you at?
-                </p>
-                </div>
-                <div data-role="fieldcontain">
-                    <fieldset data-role="controlgroup">
-                        <label for="phone" class="ui-hidden-accessible">Phone:</label>
-                        </label>
-                        <input name="" id="phone" placeholder="Enter Phone Number" value="" type="text" />
-                    </fieldset>
-                </div>
-                <div data-role="fieldcontain">
-                    <fieldset data-role="controlgroup" data-type="horizontal">
-                        <input id="radio3" name="" value="radio3" type="radio" checked="checked" />
-                        <label for="radio3">
-                            Voice
-                        </label>
-                        <input id="radio4" name="" value="radio4" type="radio" />
-                        <label for="radio4">
-                            Text
-                        </label>
-                    </fieldset>
-                </div>
-            </div>
-                <div data-role="footer" data-theme="f">
-                <div id="stretch">
-                <a data-role="button" data-theme="g" data-inline="true" data-transition="slide" data-direction="reverse" href="#page1">
-                    Cancel
-                </a>
-                <a data-role="button" data-inline="true" data-transition="slide" href="#page2">
-                    Continue
-                </a>
-                </div>
-                </div>
-            </div>
-        </div>
-</form>
-<script>
-$(function(){
-    $("input[name=jquery-submit]").on("click", function(){
-        $.post('stub.php', $("form[name=form1]").serialize(), function(data) {
-            alert(data);
-        }).error(function(){
-            alert("Error submiting the form");
-        });
-        //return false;
-    });
-});
-</script>
     </body>
 </html>
