--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ $(function() {
             </div>
             <ul data-role="listview" data-inset="true">
             <li data-theme="c">
-                <a href="#outageMap" data-transition="slide">
+                <a href="outageMap.html" data-transition="slide">
                     View Current Outages
                 </a>
             </li>
