--- a/outageMap.html
+++ b/outageMap.html
@@ -41,7 +41,7 @@ $(function() {
                 <a href="#" class="logo"></a>
                 </div>
                 <h1>
-                    Outage Center
+                    View current outages
                 </h1>
             </div>
             <div data-role="content">
